wmd_files/Selection_Gradients/foodweb2-2-2-x-vs-t.png.make.log
Wed Jul 20 14:44:18 2016
/usr/bin/make -C /usr/local/src/adaptive-dynamics-research/wmd_files/Selection_Gradients \
    foodweb2-2-2-x-vs-t.png
Including .mk files: sage-inline.mk 
Including .mk files from .sage-inline files: avec.sage.mk a-careful.sage.mk
Including .mk files from .step files: aij.py.mk aij-assemble.sage.mk aij-assemble-plot.sage.mk aij-evol.sage.mk aij-evol-plot.sage.mk direct.py.mk direct-assemble.sage.mk direct-assemble-plot.sage.mk direct-evol.sage.mk direct-evol-plot.sage.mk foodweb.py.mk foodweb.sage.mk foodweb-adap.sage.mk foodweb.plot.sage.mk foodweb-2-2.sage.mk foodweb-2-2.plot.sage.mk foodweb2.py.mk foodweb2.sage.mk foodweb2-adap.sage.mk foodweb2-adap-traj.sage.mk foodweb2.plot.sage.mk foodweb2-2-2.sage.mk foodweb2-2-2.plot.sage.mk large.py.mk large-assemble.sage.mk large-assemble-plot.sage.mk large-evol.sage.mk large-evol-plot.sage.mk logistic-S-A-curves.sage.mk maclev-S-A-curve.sage.mk logistic-S-A-curve.sage.mk maclev-1-1.sage.mk maclev-1-1-adap.sage.mk maclev-1-1-mc-adap-geom.sage.mk maclev-1-1-ak-adap-geom.sage.mk S-A-vector-field.sage.mk maclev-1-1-d1A-vector-field.sage.mk maclev-1-1-S-and-d1A-on-curve.sage.mk maclev-1-1-S-and-D-on-curve.sage.mk maclev_1_2_defs.py.mk maclev-1-2-popdyn.sage.mk maclev-1-2-adap.sage.mk maclev-1-2-p.sage.mk maclev-1-2-zngi.sage.mk maclev-1-2-geom.sage.mk maclev_unconstrained_c.py.mk maclev-2-2-c-popdyn.sage.mk maclev-2-2-c-adap.sage.mk maclev-2-2-c-p.sage.mk maclev-2-2-c-zngi.sage.mk maclev-2-2-c-geom.sage.mk maclev_2_2_defs.py.mk maclev-2-2-popdyn.sage.mk maclev-2-2-adap.sage.mk maclev-2-2-p.sage.mk maclev-2-2-zngi.sage.mk maclev-2-2-geom.sage.mk maclev_a_only_defs.py.mk maclev-a-only-popdyn.sage.mk maclev-a-only-adap.sage.mk maclev-a-only-p.sage.mk maclev-a-only-zngi.sage.mk maclev-a-only-geom.sage.mk maclev_a_c.py.mk maclev-2-2-a-c-popdyn.sage.mk maclev-2-2-a-c-adap.sage.mk maclev-2-2-a-c-p.sage.mk maclev-2-2-a-c-zngi.sage.mk maclev-2-2-a-c-geom.sage.mk maclevmodels.py.mk masel_model.py.mk masel.sage.mk masel-adap.sage.mk masel-2-adap.sage.mk statmech.py.mk statmech-assemble.sage.mk statmech-assemble-plot.sage.mk statmech-evol.sage.mk statmech-evol-plot.sage.mk sea.sage.mk sea-adap.sage.mk sea-down.sage.mk sea-down-test.sage.mk sea-vf.sage.mk sea-zero.sage.mk sea-ass.sage.mk sea-tran.sage.mk sea-all.sage.mk sea-up.sage.mk sea-up-a.sage.mk sea-ass-a.sage.mk toc.sage.mk maclev-2-2-zngi-invasion.sage.mk lotkavolterra.py.mk r_selection.py.mk r-selection.sage.mk
Including .tex.d files: foodweb-2-2.tikz.tex.d foodweb2.tikz.tex.d foodweb.tikz.tex.d
make[1]: Entering directory `/usr/local/src/adaptive-dynamics-research/wmd_files/Selection_Gradients'
rm -f foodweb2-2-2.sage.out foodweb2-2-2.sage.status foodweb2-2-2.sobj foodweb2-2-2.sage.out.tex foodweb2-2-2.tikz.tex
(sage foodweb2-2-2.sage && touch foodweb2-2-2.sage.status) | tee foodweb2-2-2.sage.dmp
  File "foodweb2-2-2.sage.py", line 6
    )
    ^
SyntaxError: invalid syntax
[ -e foodweb2-2-2.sage.status ] && (rm -f foodweb2-2-2.sage.status && mv foodweb2-2-2.sage.dmp foodweb2-2-2.sage.out) || exit 1
make[1]: *** [foodweb2-2-2.sage.out] Error 1
make[1]: Leaving directory `/usr/local/src/adaptive-dynamics-research/wmd_files/Selection_Gradients'
Make failed with exit code 2.
Wed Jul 20 14:44:19 2016
